<?xml version="1.0" encoding="utf-8"?>
<com.ven.assists.AssistsWindowLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_option"
            android:layout_width="match_parent"
            android:layout_height="292dp"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_auto_check_in_out"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorAccent"
                        android:text="@string/auto_check_in_out"
                        android:textColor="@color/colorPrimary" />


                </LinearLayout>
            </androidx.core.widget.NestedScrollView>


            <Button
                android:id="@+id/btn_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#ccc000"
                android:text="@string/view_log"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_title"
                    android:textColor="@color/_ffffff" />

                <Button
                    android:id="@+id/btn_stop_scroll_log"
                    android:layout_width="65dp"
                    android:layout_height="35dp"
                    android:backgroundTint="#FF9800"
                    android:text="@string/stop_roll"
                    android:textColor="@color/_ffffff"
                    android:textSize="10sp" />
            </LinearLayout>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_log"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text=""
                        android:textColor="@color/_ffffff" />
                </FrameLayout>
            </androidx.core.widget.NestedScrollView>

            <Button
                android:id="@+id/btn_stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#E02626"
                android:text="@string/stop"
                android:textColor="@color/_ffffff" />

            <Button
                android:id="@+id/btn_close_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4CAF50"
                android:text="@string/close_log_view"
                android:textColor="@color/_ffffff" />
        </LinearLayout>

    </LinearLayout>

</com.ven.assists.AssistsWindowLayout>